--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb://localhost:27017/mean-db
+MONGO_URI = mongodb://127.0.0.1:27017/mean-db
 JWT_SEED = Esta_es_una_llave_secreta_o_key_secret._DO NOT USE THIS VALUE_INSTEAD,_CREATE_A_COMPLEX_SECRET_AND_KEEP_IT_SAFE_OUTSIDE_OF_THE_SOURCE_CODE.
