configuraciones del backend

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,10 @@
+# URI utilizada para nuestra base de datos locar MongoDBCompass
 MONGO_URI = mongodb://127.0.0.1:27017/mean-db
+# URI utilizada para la base de datos que creamos en RailWay, tambien podríamos utilizar MogoDBAtlas en la nube.
+MONGO_URI = mongodb://mongo:rJMjE4jckpDjAOt5CN4A@containers-us-west-15.railway.app:6518
+
+# Nombre de la base de a la que deamos conectarnos.
+MONGO_DB_NAME: auth-db
+
+# Semilla para rayudar arealizar el encriptado de la clave de Token
 JWT_SEED = Esta_es_una_llave_secreta_o_key_secret._DO NOT USE THIS VALUE_INSTEAD,_CREATE_A_COMPLEX_SECRET_AND_KEEP_IT_SAFE_OUTSIDE_OF_THE_SOURCE_CODE.
